# equal-shares

./: .editorconfig  .gitignore  LICENSE  README.md  docker-compose.yaml  environment.yml  m.py
backend/: .dockerignore  .flake8  Dockerfile  Makefile  mypy.ini  pyproject.toml  requirements.txt
backend/src/: __main__.py  app.py  config.py  logger.py
backend/src/server/: admin.py  app.py  config.py  database.py  exceptions.py  logger.py  models.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.tsx  components.css  index.css  old.css  types.ts
frontend/src/components/: Footer.tsx  ForgotPasswordPage.tsx  LoginPage.tsx  MainPage.tsx  RegisterPage.tsx
micro-projects/cap/: Makefile  cap-backend.Dockerfile  cap-frontend.Dockerfile  docker-compose.yaml  environment.yml
micro-projects/cap/cap-backend/: .env-example  .gitignore  README.md
micro-projects/cap/cap-backend/api/: models.py  serializers.py  urls.py
micro-projects/cap/cap-backend/cap/: asgi.py  settings.py  settings_development.py  wsgi.py
micro-projects/cap/cap-frontend/: README.md  package-lock.json  package.json
res/Final-Project/: .gitattributes  .gitignore  README.md
res/Final-Project/dataset/: info.xlsx  information.csv  national_budget.csv
res/Final-Project/src/server/: app.py  (+10 more)
res/Final-Project/system documents/: About Page - HE.docx
res/cap-backend/: manage.py  requirements.txt
res/cap-backend/api/: admin.py  forms.py  signals.py  views.py
res/cap-backend/cap/: settings.py
res/cap-frontend/: .babelrc  .env-example
res/cap-frontend/src/: App.test.js
(+169 files in other folders)
